kubernetes/apps/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-app-wildcard
  hostnames:
    - immich.${CLUSTER_DOMAIN}
    - immich.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
